Thema File Export

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,17 @@
                 android:value=".MapsActivity" />
         </activity>
 
+        <!-- FileProvider - Expose File -->
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.ofl.savemywaypoints.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths" />
+        </provider>
+
     </application>
 
 </manifest>
