--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,11 @@ android {
     signingConfigs {
         release {
             storeFile file('C:\\Users\\ofl\\Keystore\\keystore.jks')
+        }
+        debug {
+            keyAlias 'debug'
+            keyPassword 'keystore01'
+            storeFile file('../debug.jks')
             storePassword 'keystore01'
         }
     }
@@ -16,7 +21,7 @@ android {
     defaultConfig {
         applicationId "com.ofl.savemywaypoints"
         minSdkVersion 26
-        targetSdkVersion 29
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
