--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     signingConfigs {
         release {
-            storeFile file('../keystore/keystore.jks')
+            storeFile file('C:\\Users\\ofl\\AndroidStudioProjects\\SaveMyWaypoints\\keystore\\keystore.jks')
             keyPassword 'keystore01'
             storePassword 'keystore01'
             keyAlias = 'key0'
@@ -25,8 +25,8 @@ android {
         applicationId "com.ofl.savemywaypoints"
         minSdkVersion 26
         targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName 'Maximilian'
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
