--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,31 +10,21 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
+    <!-- android:label="@string/title_launcher" -->
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_ofl"
-        android:label="@string/title_launcher"
+        android:label="TEST"
         android:roundIcon="@mipmap/ic_launcher_ofl_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity
-            android:name=".AboutActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/title_activity_version"
-            android:parentActivityName=".MainActivity"
-            android:theme="@style/FullscreenTheme">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.ofl.savemywaypoints.MainActivity" />
-        </activity>
 
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -42,14 +32,22 @@
         <activity
             android:name=".ListOfWPActivity"
             android:label="@string/title_activity_wp_list"
-
             android:parentActivityName=".MainActivity">
-
-            <!-- The meta-data tag is required if you support API level 15 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity> <!-- FileProvider - Expose File -->
+
+        <activity
+            android:name=".AboutActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_version"
+            android:parentActivityName=".MainActivity">
+            <!-- android:theme="@style/FullscreenTheme"> -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.ofl.savemywaypoints.MainActivity" />
+        </activity>
 
         <provider
             android:name="androidx.core.content.FileProvider"
