Added "Mark Waypoints"

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,14 +15,13 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_ofl"
-        android:label="TEST"
+        android:label="@string/title_launcher"
         android:roundIcon="@mipmap/ic_launcher_ofl_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".MainActivity"
-            android:label="@string/title_activity_main">
+            android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
