--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,13 +19,14 @@ android {
         applicationId "com.ofl.savemywaypoints"
         minSdkVersion 24
         targetSdkVersion 28
-        versionCode 4
-        versionName '1.2.0'
+        versionCode 5
+        versionName '1.2.1'
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
             minifyEnabled false
+            // signingConfig debug.signingConfig
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
